Add Cruise Guide case study content

--- a/src/case-studies/index.html
+++ b/src/case-studies/index.html
@@ -11,6 +11,27 @@ menuorder: 2
 
     <div class="case-study-items">
 
+      <div id="csi-cruisy" class="case-study-item clearfix" style="display: none;">
+        <a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/cs-item-cruise-guide.jpg" | prepend: site.baseurl }}" alt="" class="jiggle" />
+        </a>
+        <div class="item-text">
+          <div class="item-text-head">
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}">Cruise Guide</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}">Marlborough District Council</a></h3>
+          </div>
+          <div class="item-text-body">
+            <div class="item-icons">
+              <i class="icon icon-mobile tip"></i>
+              <i class="icon icon-desktop tip"></i>
+              <i class="icon icon-cog tip"></i>
+            </div>
+            <p>Cruise Guide puts the Marlborough Sounds in the palm of your hand. Media Suite joined forces with Marlborough District Council to provide the public with the best possible tool for navigation and recreation in the beautiful Sounds. We combined 25 open data sets with offline capability and expert local knowledge, all in a free app for Android and iPhone, and a website.</p>
+            <a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
+          </div>
+        </div> <!--.item-text -->
+      </div>  <!-- .case-study-item -->
+
       <div id="csi-tfc" class="case-study-item clearfix">
         <a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}" class="item-image">
           <img src="{{ "/img/case-studies/cs-item-transport-for-christchurch.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
