--- a/src/case-studies/marlborough-cruise-guide/index.html
+++ b/src/case-studies/marlborough-cruise-guide/index.html
@@ -1,73 +1,53 @@
 ---
 layout: default
-title: Case Studies | Marlborough Cruise Guide
-casestudyname: Marlborough Cruise Guide
-casestudyid: 2
+title: Case Studies | Cruise Guide
+casestudyname: Cruise Guide
+casestudyid: 0
 ---
 <div id="main-wrap" class="internal-page case-study">
 
   <div class="max-1200 align-center clearfix">
-
-    <h1 class="lowercase underline-orange">Case Study: Marlborough Cruise Guide</h1>
+    <h1 class="lowercase underline-orange">Cruise Guide</h1>
     {% include crumbs.html %}
     <div class="case-study-intro max-1000">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+      <p>Cruise Guide is the perfect FREE sailing companion for exploring the Marlborough Sounds.</p>
     </div>
 
     <div class="case-study-icons">
       <div class="case-study-tech">
-        <a href="#" target="_blank" class="tech-icon tech-icon-js"><img src="{{ "/img/case-studies/tech-js.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-html"><img src="{{ "/img/case-studies/tech-html-css.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-node"><img src="{{ "/img/case-studies/tech-node.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-ember"><img src="{{ "/img/case-studies/tech-ember.png" | prepend: site.baseurl }}" alt="" /></a>
-        <a href="#" target="_blank" class="tech-icon tech-icon-leaflet"><img src="{{ "/img/case-studies/tech-leaflet.png" | prepend: site.baseurl }}" alt="" /></a>
+        <span title="iOS" class="tech-icon tech-icon-ios"><img src="{{ "/img/case-studies/tech-ios.png" | prepend: site.baseurl }}" alt="iOS" /></span>
+        <span title="Android" class="tech-icon tech-icon-android"><img src="{{ "/img/case-studies/tech-android.png" | prepend: site.baseurl }}" alt="Android" /></span>
+        <span title="Ember" class="tech-icon tech-icon-ember"><img src="{{ "/img/case-studies/tech-ember.png" | prepend: site.baseurl }}" alt="Ember" /></span>
+        <span title="Leaflet" class="tech-icon tech-icon-leaflet"><img src="{{ "/img/case-studies/tech-leaflet.png" | prepend: site.baseurl }}" alt="Leaflet" /></span>
+        <span title="SilverStripe" class="tech-icon tech-icon-silverstripe"><img src="{{ "/img/case-studies/tech-silverstripe.png" | prepend: site.baseurl }}" alt="SilverStripe" /></span>
+        <span title="PhoneGap" class="tech-icon tech-icon-phone-gap"><img src="{{ "/img/case-studies/tech-phone-gap.png" | prepend: site.baseurl }}" alt="PhoneGap" /></span>
       </div>
       <div class="case-study-platforms">
-        <i class="icon icon-desktop tip"></i>
         <i class="icon icon-mobile tip"></i>
+        <i class="icon icon-desktop tip"></i>
+        <i class="icon icon-cog tip"></i>
       </div>
     </div>
 
-    <img src="{{ "/img/case-studies/cs-tmp-1.png" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100" />
-    <div class="image-caption max-1000">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
-    </div>
+    <img src="{{ "/img/case-studies/cruise-guide-1.jpg" | prepend: site.baseurl }}" alt="Marlborough Cruise Guide" class="case-study-image image-max-100 space-below-please" />
 
     <div class="max-1000 align-left space-below-please">
-      <h2 class="lowercase">The Problem</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p class="space-below-please">Sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <img src="{{ "/img/case-studies/cruise-guide-2.jpg" | prepend: site.baseurl }}" alt="Marlborough Cruise Guide" class="case-study-image-right" />
 
-      <img src="{{ "/img/case-studies/cs-tmp-1.png" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
+      <h2 class="lowercase">The Challenge</h2>
+      <p class="space-below-please">Marlborough District Council wanted to know how people were using the Marlborough Sounds, so they could improve services and facilities in the area and get a better picture of user needs. The council had a pile of interesting data that did not work well on a static map.</p>
 
-      <h2 class="lowercase">The Solution</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p class="space-below-please">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>They asked Media Suite to turn the data into an interactive app, and then a website. They wanted boaties, holidaymakers and locals to have a handy tool for enjoying their time in the Marlborough Sounds. The app, Cruise Guide, had to be as useful and user-friendly as possible.</p>
 
-      <h2 class="lowercase">Functionality</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p class="space-below-please">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <h2 class="lowercase">The Hurdles</h2>
+      <p>Cellphone service is patchy in the Sounds, and users might not have online access to the app at all times. Maps had to be downloadable to the user’s phone so they could be used offline. The maps themselves were complicated and there was a lot of data to squeeze in.</p>
 
-      <img src="{{ "/img/case-studies/cs-tmp-1.png" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 all-the-space-below" />
+      <p>Media Suite collected nautical charts, Land Information New Zealand aerial and topographical maps, tide data and charts. At least 25 Open Data sources were used. A drone was used to capture beautiful images of the Marlborough Sounds and the best swimming spots were plotted.
 
-      <h2 class="lowercase">Core Features</h2>
-      <p class="space-below-please">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-      </p>
+      <p>Usually, tidal information is only gathered at main centres like Picton. The app calculates secondary tidal information, meaning boaties can check the details of smaller bays and moorings without having to do annoying calculations for every spot they intend to visit.</p>
 
-      <h2 class="lowercase">Efficiency Gains</h2>
-      <p class="space-below-please">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-      <h2 class="lowercase">Safety Gains</h2>
-      <p class="all-the-space-below">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h2 class="lowercase">We Loved</h2>
+      <p>The Media Suite team is proud of this project; the challenge of combining data sets, tackling user problems then using the same code base to make the app into a slick website (<a href="http://www.cruiseguide.co.nz">www.cruiseguide.co.nz</a>). We couldn't resist heading up to the Sounds in summer to &ldquo;test&rdquo; the app over a few beers, barbecue tongs in hand.</p>
     </div>
 
     {% include other-case-studies.html %}
