New home page building image, remove intern ad, fix people page spacing between heading and content, remove data- attributes, remove extra . in location section

--- a/src/index.html
+++ b/src/index.html
@@ -201,14 +201,14 @@ ishome: true
       <div class="faux-table">
         <div class="faux-table-cell">
           <h2 class="lowercase underline-orange">Our Location</h2>
-          <p class="text-size-24">We are based in Christchurch but we work with clients all over New Zealand and around the world..</p>
+          <p class="text-size-24">We are based in Christchurch but we work with clients all over New Zealand and around the world.</p>
           <div class="cols-wrap">
             <div class="col" id="location-col-1">
               <div class="circle-link">
                 <h3 class="circle-main-hd lowercase fancy-pants-font">Christchurch</h3>
                 <h4 class="circle-sub-hd lowercase">New Zealand</h4>
                 <a href="{{ "/say-hello" | prepend: site.baseurl }}" class="js-image-fill">
-                  <img src="{{ "/img/hello-chch.jpg" | prepend: site.baseurl }}" alt="Media Suite office in Christchurc, New Zealand" />
+                  <img class="circle-link-image" src="{{ "/img/hello-chch-3.jpg" | prepend: site.baseurl }}" alt="Media Suite office in Christchurch, New Zealand" />
                 </a>
               </div>
               <p class="text-black"><a href="mailto:hello@mediasuite.co.nz">hello@mediasuite.co.nz</a><br/>
