--- a/src/people/index.html
+++ b/src/people/index.html
@@ -15,7 +15,7 @@ menuorder: 4
       <div class="grid-sizer"></div>
 
       <!-- Abbie -->
-      <div id="person-abbie" class="person-wrap js-iso-element" data-coffees="2" data-commits="0">
+      <div id="person-abbie" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/abbie.png " | prepend: site.baseurl }}" alt="Abbie Reid" />
@@ -57,7 +57,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Abi -->
-      <div id="person-abi" class="person-wrap js-iso-element" data-coffees="2" data-commits="0">
+      <div id="person-abi" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/abi.png " | prepend: site.baseurl }}" alt="Abi Little" />
@@ -95,7 +95,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Andrew -->
-      <div id="person-andrew" class="person-wrap js-iso-element" data-coffees="3" data-commits="115">
+      <div id="person-andrew" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/andrew.png " | prepend: site.baseurl }}" alt="Andrew Pitts" />
@@ -139,7 +139,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Dean -->
-      <div id="person-dean" class="person-wrap js-iso-element" data-coffees="2" data-commits="27">
+      <div id="person-dean" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/dean.png " | prepend: site.baseurl }}" alt="Dean Aldridge" />
@@ -183,7 +183,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Ed -->
-      <div id="person-ed" class="person-wrap js-iso-element" data-coffees="0" data-commits="872">
+      <div id="person-ed" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/ed.png " | prepend: site.baseurl }}" alt="Ed Robinson" />
@@ -221,7 +221,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Ersin -->
-      <div id="person-ersin" class="person-wrap js-iso-element" data-coffees="1" data-commits="230">
+      <div id="person-ersin" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/ersin.png " | prepend: site.baseurl }}" alt="Ersin Buckley" />
@@ -264,7 +264,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Ewen -->
-      <div id="person-ewen" class="person-wrap js-iso-element" data-coffees="1" data-commits="3">
+      <div id="person-ewen" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/ewen.png " | prepend: site.baseurl }}" alt="Ewen Cumming" />
@@ -308,7 +308,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Fiona -->
-      <div id="person-fiona" class="person-wrap js-iso-element" data-coffees="1" data-commits="2">
+      <div id="person-fiona" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/fiona.png " | prepend: site.baseurl }}" alt="Fiona Beaton" />
@@ -348,7 +348,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- George -->
-      <div id="person-george" class="person-wrap js-iso-element" data-coffees="2" data-commits="17">
+      <div id="person-george" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/george.png " | prepend: site.baseurl }}" alt="George Wills" />
@@ -391,7 +391,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- James -->
-      <div id="person-james" class="person-wrap js-iso-element" data-coffees="1" data-commits="6">
+      <div id="person-james" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/james.png " | prepend: site.baseurl }}" alt="James Pearson" />
@@ -437,7 +437,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Hollingsworth -->
-      <div id="person-hollingsworth" class="person-wrap js-iso-element" data-coffees="1" data-commits="185">
+      <div id="person-hollingsworth" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/hollingsworth.png " | prepend: site.baseurl }}" alt="Jonathan Hollingsworth"
@@ -483,7 +483,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Jonathan -->
-      <div id="person-jonathan" class="person-wrap js-iso-element" data-coffees="1" data-commits="666">
+      <div id="person-jonathan" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/jonathan.png " | prepend: site.baseurl }}" alt="Jonathan Prince" />
@@ -521,7 +521,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Josh -->
-      <div id="person-josh" class="person-wrap js-iso-element" data-coffees="2" data-commits="690">
+      <div id="person-josh" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/josh.png " | prepend: site.baseurl }}" alt="Joshua Vial" />
@@ -559,7 +559,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Julia -->
-      <div id="person-julia" class="person-wrap js-iso-element" data-coffees="2" data-commits="281">
+      <div id="person-julia" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/julia.png " | prepend: site.baseurl }}" alt="Julia Hide" />
@@ -602,7 +602,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Kerry -->
-      <div id="person-kerry" class="person-wrap js-iso-element" data-coffees="3" data-commits="0">
+      <div id="person-kerry" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/kerry.png " | prepend: site.baseurl }}" alt="Kerry Gibbs" />
@@ -647,7 +647,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Mark -->
-      <div id="person-mark" class="person-wrap js-iso-element" data-coffees="3" data-commits="1379">
+      <div id="person-mark" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/mark.png " | prepend: site.baseurl }}" alt="Mark Stufart" />
@@ -687,7 +687,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Matt -->
-      <div id="person-matt" class="person-wrap js-iso-element" data-coffees="1" data-commits="2429">
+      <div id="person-matt" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/matt.png " | prepend: site.baseurl }}" alt="Matt Lang" />
@@ -724,7 +724,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Nat -->
-      <div id="person-nat" class="person-wrap js-iso-element" data-coffees="0" data-commits="0">
+      <div id="person-nat" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/nat.png " | prepend: site.baseurl }}" alt="Nat Eustace" />
@@ -769,7 +769,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Patrick -->
-      <!-- <div id="person-patrick" class="person-wrap js-iso-element" data-coffees="1" data-commits="1118">
+      <!-- <div id="person-patrick" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/patrick.png " | prepend: site.baseurl }}" alt="Patrick Walsh" />
@@ -807,7 +807,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Pete -->
-      <div id="person-pete" class="person-wrap js-iso-element" data-coffees="3" data-commits="0">
+      <div id="person-pete" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/pete.png " | prepend: site.baseurl }}" alt="Pete Banks" />
@@ -851,7 +851,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Sarah -->
-      <div id="person-sarah" class="person-wrap js-iso-element" data-coffees="1" data-commits="0" data-sleep="0">
+      <div id="person-sarah" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/sarah.png " | prepend: site.baseurl }}" alt="Sarah Pitts" />
@@ -888,7 +888,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Steve -->
-      <div id="person-steve" class="person-wrap js-iso-element" data-coffees="2" data-commits="423" data-sleep="0">
+      <div id="person-steve" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/steve.png " | prepend: site.baseurl }}" alt="Steve Liew" />
@@ -932,7 +932,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Stu -->
-      <div id="person-stu" class="person-wrap js-iso-element" data-coffees="0" data-commits="0" data-sleep="0">
+      <div id="person-stu" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/stu.png " | prepend: site.baseurl }}" alt="Stu Craig" />
@@ -972,7 +972,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Tom -->
-      <div id="person-tom" class="person-wrap js-iso-element" data-coffees="0" data-commits="1320">
+      <div id="person-tom" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/tom.png " | prepend: site.baseurl }}" alt="Tom Fenton" />
@@ -1016,7 +1016,7 @@ menuorder: 4
       <!-- .person-wrap -->
 
       <!-- Matisse -->
-      <div id="person-matisse" class="person-wrap js-iso-element" data-coffees="0" data-commits="0" data-sleep="22">
+      <div id="person-matisse" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
           <img class="person-image" src="{{ "/img/people/matisse.png " | prepend: site.baseurl }}" alt="Matisse" />
