Update case study content, add cruise guide case study to case studies page and jumper links on other case studies

--- a/src/case-studies/index.html
+++ b/src/case-studies/index.html
@@ -11,7 +11,7 @@ menuorder: 2
 
     <div class="case-study-items">
 
-      <div id="csi-cruisy" class="case-study-item clearfix" style="display: none;">
+      <div id="csi-cruisy" class="case-study-item clearfix">
         <a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}" class="item-image">
           <img src="{{ "/img/case-studies/cs-item-cruise-guide.jpg" | prepend: site.baseurl }}" alt="" class="jiggle" />
         </a>
