Remove careers page and update links to external jobs site

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@ ishome: true
       <i class="icon-down-open-big"></i>
     </a>
     <div class="hiring-bubble-container js-fade-in-up-delayed">
-      <a href="/careers/" class="hiring-bubble jiggle">
+      <a href="https://careers.mediasuite.co.nz/jobs" class="hiring-bubble jiggle">
         <span class="hiring-text">We're hiring.</span>
         <span class="apply-text">Learn more</span>
       </a>
@@ -172,7 +172,7 @@ ishome: true
             </div>
             <div class="col third-col" id="culture-col-3">
               <h4><img class="curious-minds-text" src="{{ "/img/title-curious-minds-wanted.png" | prepend: site.baseurl }}" alt="Curious minds wanted for curious work" /></h4>
-              <a href="{{ "/careers" | prepend: site.baseurl }}" class="drop-btn orange-bg">Work here</a>
+              <a href="https://careers.mediasuite.co.nz/jobs" class="drop-btn orange-bg">Work here</a>
             </div>
           </div> <!-- .cols-wrap -->
         </div> <!-- .faux-table-cell -->
